; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mss3.c_decode_dct_block.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mss3.c_decode_dct_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, i32*, i32*, i32, i32, i32*, i32, i32)* @decode_dct_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @decode_dct_block(%struct.TYPE_4__* %0, i32* %1, i32* %2, i32 %3, i32 %4, i32* %5, i32 %6, i32 %7) #0 {
  %9 = alloca %struct.TYPE_4__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32* %2, i32** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32* %5, i32** %14, align 8
  store i32 %6, i32* %15, align 4
  store i32 %7, i32* %16, align 4
  %22 = load i32, i32* %13, align 4
  %23 = ashr i32 %22, 3
  store i32 %23, i32* %21, align 4
  %24 = load i32, i32* %15, align 4
  %25 = load i32, i32* %21, align 4
  %26 = mul nsw i32 %24, %25
  store i32 %26, i32* %19, align 4
  %27 = load i32, i32* %16, align 4
  %28 = load i32, i32* %21, align 4
  %29 = mul nsw i32 %27, %28
  store i32 %29, i32* %20, align 4
  store i32 0, i32* %18, align 4
  br label %30

30:                                               ; preds = %72, %8
  %31 = load i32, i32* %18, align 4
  %32 = load i32, i32* %21, align 4
  %33 = icmp slt i32 %31, %32
  br i1 %33, label %34, label %75

34:                                               ; preds = %30
  store i32 0, i32* %17, align 4
  br label %35

35:                                               ; preds = %63, %34
  %36 = load i32, i32* %17, align 4
  %37 = load i32, i32* %21, align 4
  %38 = icmp slt i32 %36, %37
  br i1 %38, label %39, label %66

39:                                               ; preds = %35
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %41 = load i32*, i32** %10, align 8
  %42 = load i32*, i32** %14, align 8
  %43 = load i32, i32* %19, align 4
  %44 = load i32, i32* %17, align 4
  %45 = add nsw i32 %43, %44
  %46 = load i32, i32* %20, align 4
  %47 = load i32, i32* %18, align 4
  %48 = add nsw i32 %46, %47
  %49 = call i64 @decode_dct(%struct.TYPE_4__* %40, i32* %41, i32* %42, i32 %45, i32 %48)
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %51, label %54

51:                                               ; preds = %39
  %52 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %53 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %52, i32 0, i32 0
  store i32 1, i32* %53, align 4
  br label %75

54:                                               ; preds = %39
  %55 = load i32*, i32** %11, align 8
  %56 = load i32, i32* %17, align 4
  %57 = mul nsw i32 %56, 8
  %58 = sext i32 %57 to i64
  %59 = getelementptr inbounds i32, i32* %55, i64 %58
  %60 = load i32, i32* %12, align 4
  %61 = load i32*, i32** %14, align 8
  %62 = call i32 @ff_mss34_dct_put(i32* %59, i32 %60, i32* %61)
  br label %63

63:                                               ; preds = %54
  %64 = load i32, i32* %17, align 4
  %65 = add nsw i32 %64, 1
  store i32 %65, i32* %17, align 4
  br label %35

66:                                               ; preds = %35
  %67 = load i32, i32* %12, align 4
  %68 = mul nsw i32 8, %67
  %69 = load i32*, i32** %11, align 8
  %70 = sext i32 %68 to i64
  %71 = getelementptr inbounds i32, i32* %69, i64 %70
  store i32* %71, i32** %11, align 8
  br label %72

72:                                               ; preds = %66
  %73 = load i32, i32* %18, align 4
  %74 = add nsw i32 %73, 1
  store i32 %74, i32* %18, align 4
  br label %30

75:                                               ; preds = %51, %30
  ret void
}

declare dso_local i64 @decode_dct(%struct.TYPE_4__*, i32*, i32*, i32, i32) #1

declare dso_local i32 @ff_mss34_dct_put(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
